[gd_scene load_steps=21 format=2]

[ext_resource path="res://Themes/BasicTheme.tres" type="Theme" id=1]
[ext_resource path="res://Content/Icons/BG/Bg.png" type="Texture" id=2]
[ext_resource path="res://Content/Drawingboard.gd" type="Script" id=3]
[ext_resource path="res://Content/Grid.gd" type="Script" id=4]
[ext_resource path="res://Content/Layers.gd" type="Script" id=5]
[ext_resource path="res://Content/Icons/AddLayer/Normal.png" type="Texture" id=6]
[ext_resource path="res://Content/Icons/AddLayer/Remove.png" type="Texture" id=7]
[ext_resource path="res://Content/Icons/Pencil/Normal.png" type="Texture" id=8]
[ext_resource path="res://Content/Icons/Pencil/Hover.png" type="Texture" id=9]
[ext_resource path="res://Content/Icons/Eraser/Normal.png" type="Texture" id=10]
[ext_resource path="res://Content/Icons/Eraser/Hover.png" type="Texture" id=11]
[ext_resource path="res://Content/Eraser.gd" type="Script" id=12]
[ext_resource path="res://Content/Previewer.gd" type="Script" id=13]
[ext_resource path="res://Content/Icons/AddLayer/center.png" type="Texture" id=14]
[ext_resource path="res://Content/Icons/Arrows/arrow.png" type="Texture" id=15]
[ext_resource path="res://Content/Icons/Arrows/arrowL.png" type="Texture" id=16]
[ext_resource path="res://Content/Icons/Arrows/ArrowU.png" type="Texture" id=17]
[ext_resource path="res://Content/Icons/Arrows/arrowD.png" type="Texture" id=18]
[ext_resource path="res://Content/PalettePicker.gd" type="Script" id=19]
[ext_resource path="res://Content/Export.gd" type="Script" id=20]

[node name="Root" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 40.0498, 679.751 ],
"_edit_vertical_guides_": [ 737.932, 39.995, 678.761 ]
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.735107
margin_right = 1280.74
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
theme = ExtResource( 1 )

[node name="Drawingboard" type="TextureRect" parent="UI"]
self_modulate = Color( 1, 1, 1, 0.329412 )
margin_left = 80.0
margin_top = 40.0
margin_right = 720.0
margin_bottom = 680.0
rect_min_size = Vector2( 640, 640 )
focus_mode = 2
mouse_default_cursor_shape = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
script = ExtResource( 3 )

[node name="UnderLayer" type="TextureRect" parent="UI/Drawingboard"]
modulate = Color( 1, 1, 1, 0.490196 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 640 )
expand = true
stretch_mode = 1

[node name="Editor" type="TextureRect" parent="UI/Drawingboard"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 640 )
expand = true
stretch_mode = 1

[node name="Grid" type="Control" parent="UI/Drawingboard"]
modulate = Color( 1, 1, 1, 0.47451 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="Layers" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 97.2998
margin_top = -319.788
margin_right = 495.3
margin_bottom = -95.7878
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="UI/Layers"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Layers/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 16.0
rect_min_size = Vector2( 400, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Layers/Panel/HBoxContainer"]
margin_right = 350.0
margin_bottom = 224.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 350, 0 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Layers/Panel/HBoxContainer/ScrollContainer"]
margin_right = 350.0
margin_bottom = 224.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Layers/Panel/HBoxContainer"]
margin_left = 350.0
margin_right = 400.0
margin_bottom = 224.0
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Add" type="TextureButton" parent="UI/Layers/Panel/HBoxContainer/VBoxContainer2"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
expand = true

[node name="rmv" type="TextureButton" parent="UI/Layers/Panel/HBoxContainer/VBoxContainer2"]
visible = false
margin_top = 50.0
margin_right = 50.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 50 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="UI/Layers"]
margin_left = 0.962646
margin_top = 195.788
margin_right = 122.963
margin_bottom = 227.788
text = "Layers "

[node name="Tools" type="Control" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -75.0
margin_bottom = 720.0
rect_min_size = Vector2( 75, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Tools"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -75.0
margin_bottom = 720.0
rect_min_size = Vector2( 75, 0 )
custom_constants/separation = 15

[node name="Pen" type="TextureButton" parent="UI/Tools/VBoxContainer"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Eraser" type="TextureButton" parent="UI/Tools/VBoxContainer"]
margin_top = 90.0
margin_right = 75.0
margin_bottom = 165.0
rect_min_size = Vector2( 75, 75 )
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true
script = ExtResource( 12 )

[node name="ColorPickerButton" type="ColorPickerButton" parent="UI/Tools/VBoxContainer"]
margin_top = 180.0
margin_right = 75.0
margin_bottom = 255.0
rect_min_size = Vector2( 75, 75 )
shortcut_in_tooltip = false
edit_alpha = false

[node name="Preview" type="Control" parent="UI"]
margin_left = 738.015
margin_top = 275.442
margin_right = 1138.01
margin_bottom = 675.442
rect_min_size = Vector2( 400, 400 )
rect_clip_content = true
script = ExtResource( 13 )

[node name="Panel" type="TextureRect" parent="UI/Preview"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="ViewportContainer" type="ViewportContainer" parent="UI/Preview"]
margin_left = 1.09344
margin_top = -10.2913
margin_right = 401.093
margin_bottom = 392.709
stretch = true
stretch_shrink = 3

[node name="Viewport" type="Viewport" parent="UI/Preview/ViewportContainer"]
size = Vector2( 133, 134 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Model" type="Node2D" parent="UI/Preview/ViewportContainer/Viewport"]
position = Vector2( 64, 64 )

[node name="HSlider" type="HSlider" parent="UI/Preview"]
margin_right = 400.0
margin_bottom = 16.0
mouse_default_cursor_shape = 10
max_value = 360.0
value = 2.0
scrollable = false

[node name="RotateToggle" type="CheckButton" parent="UI/Preview"]
margin_left = 293.0
margin_top = 13.0
margin_right = 397.0
margin_bottom = 53.0
mouse_default_cursor_shape = 2
text = "Rotating"

[node name="HSlider2" type="HSlider" parent="UI/Preview"]
margin_left = 202.0
margin_top = 385.0
margin_right = 397.0
margin_bottom = 401.0
mouse_default_cursor_shape = 10
min_value = 1.0
max_value = 20.0
value = 3.0

[node name="Label" type="Label" parent="UI/Preview"]
margin_left = 143.266
margin_top = 377.139
margin_right = 202.266
margin_bottom = 409.139
text = "Zoom:"

[node name="Mover" type="Control" parent="UI/Preview"]
margin_left = 0.249878
margin_top = 309.558
margin_right = 90.2499
margin_bottom = 399.558
rect_min_size = Vector2( 90, 90 )

[node name="down" type="TextureButton" parent="UI/Preview/Mover"]
margin_right = 30.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
expand = true

[node name="Center" type="TextureButton" parent="UI/Preview/Mover"]
margin_left = 30.0
margin_top = 30.0
margin_right = 60.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 14 )
expand = true

[node name="up" type="TextureButton" parent="UI/Preview/Mover"]
margin_left = 60.3118
margin_top = -0.45197
margin_right = 90.3118
margin_bottom = 29.548
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true

[node name="Right" type="TextureButton" parent="UI/Preview/Mover"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -15.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 30 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 15 )
expand = true

[node name="Left" type="TextureButton" parent="UI/Preview/Mover"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.0
margin_right = 30.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 30 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 16 )
expand = true

[node name="Up" type="TextureButton" parent="UI/Preview/Mover"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -15.0
margin_right = 15.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 17 )
expand = true

[node name="Down" type="TextureButton" parent="UI/Preview/Mover"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -30.0
margin_right = 15.0
rect_min_size = Vector2( 30, 30 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 18 )
expand = true

[node name="PalettePicker" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_right = -1200.0
margin_bottom = -41.0
script = ExtResource( 19 )

[node name="ItemContainer" type="ItemList" parent="UI/PalettePicker"]
margin_right = 83.0
margin_bottom = 679.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "", null, true, "", null, false ]
max_columns = 2
same_column_width = true
fixed_column_width = 28
icon_mode = 0
fixed_icon_size = Vector2( 30, 30 )

[node name="Export" type="Control" parent="UI"]
margin_right = 278.0
margin_bottom = 40.0
script = ExtResource( 20 )

[node name="Export" type="Button" parent="UI/Export"]
margin_left = 821.265
margin_right = 904.265
margin_bottom = 40.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Export"

[node name="Import" type="Button" parent="UI/Export"]
margin_left = 737.636
margin_top = 0.24577
margin_right = 820.636
margin_bottom = 40.2458
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Import"

[node name="FileDialog" type="FileDialog" parent="UI/Export/Import"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -520.79
margin_top = 102.668
margin_right = 280.21
margin_bottom = 611.668
theme = ExtResource( 1 )
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "C:/"
current_file = "Output"
current_path = "C:/Output"

[node name="LineEdit" type="LineEdit" parent="UI/Export"]
margin_left = 973.0
margin_top = 9.0
margin_right = 1134.0
margin_bottom = 33.0
focus_mode = 1
max_length = 50
focus_mode = 1
context_menu_enabled = false
placeholder_text = "rename me"
placeholder_alpha = 0.382
caret_blink_speed = 0.1

[node name="Label" type="Label" parent="UI/Export"]
margin_left = 903.265
margin_top = 4.0
margin_right = 972.265
margin_bottom = 36.0
text = "Name :"

[node name="LoadPalette" type="Button" parent="UI/Export"]
margin_right = 83.0
margin_bottom = 38.0
mouse_default_cursor_shape = 2
text = "Load Palette"

[node name="FileDialog" type="FileDialog" parent="UI/Export/LoadPalette"]
margin_left = 392.265
margin_top = 190.0
margin_right = 1022.26
margin_bottom = 545.0
window_title = "Load a palette(.hex file)"
resizable = true
mode = 0
access = 1
filters = PoolStringArray( "*.hex" )
show_hidden_files = false
current_dir = "user://"
current_path = "user://"

[node name="Button" type="Button" parent="UI/Export"]
margin_left = 561.0
margin_right = 720.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
text = "New Sprite"

[connection signal="pressed" from="UI/Layers/Panel/HBoxContainer/VBoxContainer2/Add" to="UI/Layers" method="_on_NewLayer_pressed"]
[connection signal="pressed" from="UI/Layers/Panel/HBoxContainer/VBoxContainer2/rmv" to="UI/Layers" method="_on_rmv_pressed"]
[connection signal="pressed" from="UI/Tools/VBoxContainer/Pen" to="UI/Drawingboard" method="_on_Pen_pressed"]
[connection signal="pressed" from="UI/Tools/VBoxContainer/Eraser" to="UI/Drawingboard" method="_on_Eraser_pressed"]
[connection signal="color_changed" from="UI/Tools/VBoxContainer/ColorPickerButton" to="UI/Drawingboard" method="_on_ColorPickerButton_color_changed"]
[connection signal="value_changed" from="UI/Preview/HSlider" to="UI/Preview" method="_on_HSlider_value_changed"]
[connection signal="toggled" from="UI/Preview/RotateToggle" to="UI/Preview" method="_on_RotateToggle_toggled"]
[connection signal="value_changed" from="UI/Preview/HSlider2" to="UI/Preview" method="_on_HSlider2_value_changed"]
[connection signal="pressed" from="UI/Preview/Mover/down" to="UI/Preview" method="DecreaseResolution"]
[connection signal="pressed" from="UI/Preview/Mover/Center" to="UI/Preview" method="Center"]
[connection signal="pressed" from="UI/Preview/Mover/up" to="UI/Preview" method="IncreaseResolution"]
[connection signal="pressed" from="UI/Preview/Mover/Right" to="UI/Preview" method="_on_Right_pressed"]
[connection signal="pressed" from="UI/Preview/Mover/Left" to="UI/Preview" method="_on_Left_pressed"]
[connection signal="pressed" from="UI/Preview/Mover/Up" to="UI/Preview" method="_on_Up_pressed"]
[connection signal="pressed" from="UI/Preview/Mover/Down" to="UI/Preview" method="_on_Down_pressed"]
[connection signal="item_selected" from="UI/PalettePicker/ItemContainer" to="UI/PalettePicker" method="_on_ItemContainer_item_selected"]
[connection signal="pressed" from="UI/Export/Export" to="UI/Export" method="ExportPNG"]
[connection signal="pressed" from="UI/Export/Import" to="UI/Export" method="_on_Import_pressed"]
[connection signal="dir_selected" from="UI/Export/Import/FileDialog" to="UI/Export" method="_on_FileDialog_dir_selected"]
[connection signal="text_changed" from="UI/Export/LineEdit" to="UI/Export" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="UI/Export/LoadPalette" to="UI/Export" method="_on_LoadPalette_pressed"]
[connection signal="file_selected" from="UI/Export/LoadPalette/FileDialog" to="UI/Export" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="UI/Export/Button" to="UI/Export" method="_on_Button_pressed"]
